2007-02-12	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, terminal/terminal-shortcut-editor.c,
	  terminal/Makefile.am: Link to -lx11. Bug #2870.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-dbus.c: Apply Brian's patch to fix invalid
	  variable type for user id. Bug #2898.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.6 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on libexo 0.3.2.
	* terminal/Makefile.am: No need to define EXO_API_SUBJECT_TO_CHANGE
	  any more.
	* THANKS: Add missing translator credits.
	* po/*.po, po-doc/*.po: Update Project-Id-Version.

2007-01-02	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_detach_screen):
	  Do not crash when you try to detach the first tab with MiscAlwaysTabs
	  is set to TRUE. Bug #2686.
	* terminal/main.c, terminal/terminal-dialogs.c: Update Copyright dates.
	* po/Terminal.pot, po/*.po: Merge the changed string.
	* po/de.po: Update german translations.

2006-12-21	Benedikt Meurer <benny@xfce.org>

	* NEWS, configure.in.in, terminal/terminal-app.c,
	  terminal/terminal-screen.c: Add support for real transparency with
	  GTK+ 2.10 and a compositing manager. Bug #2671.

2006-11-17	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c: Apply patch from Nick Schermer
	  <nick@xfce.org> to allow reordering of tabs with GTK+ 2.10.x.
	  Bug #1974.

2006-11-06	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, terminal/Makefile.am: Fix installation on case
	  insensitive file systems. Bug #2526.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.5.8rc2 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on libexo 0.3.1.12rc2.
	* THANKS: Add missing translator credits.