@@ -1,3 +1,7 @@
+?.?.?
+=====
+- Test for support of -Wall, -Werror and -errwarn=%all. (Bug #2920).
+
 0.2.6
 =====
 - Add support for real transparency with GTK+ 2.10 and a composition manager
