@@ -1,3 +1,8 @@
+2007-02-27	Nick Schermer <nick@xfce.org>
+
+	* configure.in.in: Apply patch from bug 2920 to check the -Wall, 
+	  -Werror and -errwarn=%all flags before compiling.
+
 2007-02-12	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in, terminal/terminal-shortcut-editor.c,
